[package]
name = "implicit3d"
version = "0.13.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]

description = "3d implicit geometry."
repository = "https://github.com/hmeyer/implicit3d"
readme = "README.md"
keywords = ["implict", "3d", "round", "csg", "primitives"]
license = "GPL-3.0"

[lib]
name = "implicit3d"
path = "src/lib.rs"

[dependencies]
nalgebra = "0.16"
alga = "0.7"
stl_io = "0.4"
bbox = "0.9"
num-traits = "0.2"

[dev-dependencies]
bencher = "0.1.*"
approx = "0.3"

[[bench]]
name = "objects"
path = "src/benches/objects.rs"
harness = false

[badges]
travis-ci = { repository = "hmeyer/implicit3d", branch = "master" }
codecov = { repository = "hmeyer/implicit3d", branch = "master", service = "github" }
