[package]
name = "implicit3d"
version = "0.15.0"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2018"

description = "3d implicit geometry."
repository = "https://github.com/hmeyer/implicit3d"
readme = "README.md"
keywords = ["implict", "3d", "round", "csg", "primitives"]
license = "Apache-2.0 OR MIT"

[lib]
name = "implicit3d"
path = "src/lib.rs"

[dependencies]
bbox = "0.11.2"
nalgebra = "0.27.1"
num-traits = "0.2.14"
simba = "0.5.1"
stl_io = "0.6.0"

[dev-dependencies]
bencher = "0.1.5"
approx = "0.5.0"

[[bench]]
name = "objects"
path = "src/benches/objects.rs"
harness = false

[badges]
travis-ci = { repository = "hmeyer/implicit3d", branch = "master" }
codecov = { repository = "hmeyer/implicit3d", branch = "master", service = "github" }

[patch.crates-io]
bbox = { git = "https://github.com/dflemstr/bbox.git" }
